trying out calendly. need to figure out if i can change styling further.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "flatpickr": "^4.6.13",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
+    "react-flatpickr": "^3.10.13",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
