updated connection string

--- a/server/config.env
+++ b/server/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://alanakeeton:5wTIrVVxyKjHstVx@artistrybymel.pqqcuwu.mongodb.net/
+ATLAS_URI=mongodb+srv://alanapkeeton:ArJ6NankbNzeerl4@artistrybymel.pqqcuwu.mongodb.net/
